--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,7 @@ theme = "coming-soon"
 
 [params]
     title = "Fantastic Realms" 
-    description = "Tales of adventure, fantasy, science fiction, and more. An AI platform for writers. A community for fans."
+    description = "Tales of adventure, fantasy, science fiction, horror, and more. An AI platform for writers. A community for fans."
     favicon = ""
     message = "COMING OCTOBER 2024" 
     release = "October 1, 2024" 
